# spillman-channel

./: .gitignore  Cargo.toml  README.md  checksums.txt
.github/workflows/: ci.yml
contracts/spillman-lock/: Cargo.toml  README.md  build.rs
contracts/spillman-lock/src/: main.rs
deployment/testnet/: testnet.json  testnet.sh  testnet.toml
deployment/testnet-multisig/: testnet.json  testnet.toml
deployment/testnet-multisig/migrations/: 2025-11-12-071856.json  2025-11-12-074107.json  2025-11-12-080227.json  2025-11-12-080715.json
deployment/testnet/migrations/: 2025-10-29-102156.json  2025-10-31-094559.json  2025-11-01-024545.json  2025-11-01-035159.json  2025-11-01-041732.json  2025-11-05-081334.json  2025-11-05-085022.json  2025-11-05-092809.json  2025-11-07-034808.json  2025-11-07-035241.json  2025-11-18-082521.json  2025-11-18-090703.json  2025-12-05-045514.json
docs/: bitcoin-wiki-example7-vs-spillman.md  spillman-lock-design.md
docs/performance/: cycles-analysis.md
docs/performance/fixtrues/: mock_base_ckb_commitment_path_tx.json  mock_base_ckb_commitment_path_tx_01.json  mock_base_ckb_timeout_path_tx.json  mock_base_ckb_timeout_path_tx_01.json  mock_base_usdi_commitment_path_tx.json  mock_base_usdi_commitment_path_tx_01.json  mock_base_usdi_timeout_path_tx.json  mock_base_usdi_timeout_path_tx_01.json
examples/: .gitignore  Cargo.toml  DEVELOPMENT_PLAN.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  config.toml.example
examples/src/: full_flow.rs  main.rs
examples/src/commands/: mod.rs  pay.rs  refund.rs  settle.rs  setup.rs  sign.rs
examples/src/signer/: mod.rs  spillman_signer.rs
examples/src/storage/: mod.rs  tx_storage.rs
examples/src/tx_builder/: commitment.rs  funding.rs  funding_v2.rs  mod.rs  refund.rs  refund_v2.rs  spillman_lock.rs  witness_utils.rs
examples/src/utils/: config.rs  crypto.rs  mod.rs  rpc.rs
tests/: Cargo.toml
tests/src/: tests.rs
