[package]
name = "spillman-channel-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "full_flow"
path = "src/full_flow.rs"

[[bin]]
name = "spillman-cli"
path = "src/main.rs"

[dependencies]
ckb-sdk = "4.4.0"
ckb-types = "0.202.0"
ckb-jsonrpc-types = "0.202.0"
ckb-crypto = { version = "0.202.0", features = ["secp"] }
ckb-hash = "1.0.0"
secp256k1 = { version = "0.30", features = ["recovery"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"

