[package]
name = "spillman-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "1.0.1"
ckb-hash = { version = "1.0.0", default-features = false, features = ["ckb-contract"] }
hex = { version = "0.4", default-features = false, features = ["alloc"]}

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]

[build-dependencies]
ckb-gen-types = "1.0.0"
hex = "0.4"
